--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -5,145 +5,143 @@
     <meta charset="utf-8">
     <title>{{ data.0.first_name }}'s Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="{% static 'js/confetti.js' %}"></script>
+    <link href="{% static 'css/my_profile.css' %}" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-  <div class="main-body">
-    <div class="row gutters-sm">
-      <div class="col-md-4 mb-3">
-        <div class="card">
-          <div class="card-body">
-            <div class="d-flex flex-column align-items-center text-center">
-              <img src="/media/{{ data.0.profile_image }}" alt="User" class="rounded-circle" width="250">
-              <div class="mt-3">
-                <h4>{{ data.0.first_name}} {{ data.0.last_name}}</h4>
-                <p class="text-secondary mb-1">{{ data.0.birth_date|date:"d M Y" }}</p>
-                <p class="text-muted font-size-sm">{{ data.0.address }}</p>
-                <button class="btn btn-primary">Follow</button>
-                <button class="btn btn-outline-primary">Message</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mt-5" id="social-flex">
-          <ul class="list-group list-group-flush">
-
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#21B526" class="feather mr-2 icon-inline text-primary"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"></path></svg>WhatsApp</h6>
-
-              <a href="https://wa.me/{{data.0.mobile_no}}" target="_blank" class="align-self-end ml-auto">
-                <span class="text-secondary">{{ data.0.phone_number }}</span>
-              </a>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
-              <span class="text-secondary">{{ data.0.social_instagram }}</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
-              <span class="text-secondary">{{ data.0.social_facebook }}</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
-              <span class="text-secondary">@{{ data.0.social_twitter }}</span>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Full Name</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                {{ data.0.first_name}} {{ data.0.last_name}}
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Email</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                {{ data.0.email }}
-              </div>
-            </div>
-            <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Mobile</h6>
+<div class="user-profile-container">
+    <div class="user-profile-row">
+        <div class="user-profile-column-left">
+            <!-- Profile photo and follow(left) -->
+            <div class="card">
+                <div class="card-body">
+                <div class="d-flex flex-column align-items-center text-center">
+                    <img src="/media/{{ data.0.profile_image }}" alt="User" class="rounded-circle" width="250">
+                    <div class="mt-3">
+                    <h4>{{ data.0.first_name}} {{ data.0.last_name}}</h4>
+                    <p class="text-secondary mb-1">{{ data.0.birth_date|date:"d M Y" }}</p>
+                    <p class="text-muted font-size-sm">{{ data.0.address }}</p>
+                    <button class="btn btn-primary">Follow</button>
+                    <button class="btn btn-outline-primary">Message</button>
+                    </div>
                 </div>
-                <div class="col-sm-9 text-secondary">
-                  {{ data.0.phone_number }}
                 </div>
-              </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">D.O.B</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                {{ data.0.birth_date|date:"d M Y" }}
-              </div>
             </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Address</h6>
-              </div>
-              <div class="col-sm-9 text-secondary">
-                {{ data.0.address }}
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <h6 class="mb-0">Show Default Friends</h6>
-              </div>
-              <input type="checkbox" name="show_default_friends" id="show_default_friends" {% if data.0.show_default_friends %} checked{% endif %} onclick="return false">
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-12">
-                <a class="btn btn-info " href="/edit_profile">Edit</a>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="wrapper">
-        <div class="countdown">
-          <!-- 1st box -->
-          <div class="box">
-            <span class="text">Days</span>
-            <span class="num" id="day-box">00</span>
-          </div>
-          <!-- 2nd box -->
-          <div class="box">
-            <span class="text">Hours</span>
-            <span class="num" id="hr-box">00</span>
-          </div>
-          <!-- 3rd box -->
-          <div class="box">
-            <span class="text">Minutes</span>
-            <span class="num" id="min-box">00</span>
-          </div>
-          <!-- 4th box -->
-          <div class="box">
-            <span class="text">Seconds</span>
-            <span class="num" id="sec-box">00</span>
-          </div>
-        </div>         
-      </div>
+        <div class="user-profile-column-right">
+            <!-- User information box(Right)-->
+            <div class="card mb-3">
+                <div class="card-body">
+                    <div class="row">
+                        <h6 class="mb-0 txt-label">Full Name</h6>
+                        <div class="col-sm-9 text-secondary user-text-value">
+                            {{ data.0.first_name}} {{ data.0.last_name}}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <h6 class="mb-0 txt-label">Email</h6>
+                        <div class="col-sm-9 text-secondary user-text-value">
+                            {{ data.0.email }}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <h6 class="mb-0 txt-label">Mobile</h6>
+                        <div class="col-sm-9 text-secondary user-text-value">
+                            {{ data.0.phone_number }}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <h6 class="mb-0 txt-label">D.O.B</h6>
+                        <div class="col-sm-9 text-secondary user-text-value">
+                            {{ data.0.birth_date|date:"d M Y" }}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <h6 class="mb-0 txt-label">Address</h6>
+                        <div class="col-sm-9 text-secondary user-text-value">
+                            {{ data.0.address }}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <h6 class="mb-0 txt-label">Show Default Friends</h6>
+                        <div class="col-sm-9 text-secondary user-text-value">
+                            <input type="checkbox" name="show_default_friends" id="show_default_friends" {% if data.0.show_default_friends %} checked{% endif %} onclick="return false">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row edit-button">
+                        <a class="btn btn-info " href="/edit_profile">Edit</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+
+    <div class="user-profile-row">
+        <div class="user-profile-column-left">
+            <!-- Social Media box (Left) -->
+            <div class="card mt-5" id="social-flex">
+                <ul class="list-group list-group-flush">
+    
+                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#21B526" class="feather mr-2 icon-inline text-primary"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"></path></svg>WhatsApp</h6>
+    
+                    <a href="https://wa.me/{{data.0.mobile_no}}" target="_blank" class="align-self-end ml-auto">
+                    <span class="text-secondary">{{ data.0.phone_number }}</span>
+                    </a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
+                    <span class="text-secondary">{{ data.0.social_instagram }}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
+                    <span class="text-secondary">{{ data.0.social_facebook }}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
+                    <span class="text-secondary">@{{ data.0.social_twitter }}</span>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="user-profile-column-right">
+        <!-- Countdown box(right) -->
+        <div class="wrapper">
+            <div class="countdown">
+                <!-- 1st box -->
+                <div class="box">
+                    <span class="text">Days</span>
+                    <span class="num" id="day-box">00</span>
+                </div>
+                <!-- 2nd box -->
+                <div class="box">
+                    <span class="text">Hours</span>
+                    <span class="num" id="hr-box">00</span>
+                </div>
+                <!-- 3rd box -->
+                <div class="box">
+                    <span class="text">Minutes</span>
+                    <span class="num" id="min-box">00</span>
+                </div>
+                <!-- 4th box -->
+                <div class="box">
+                    <span class="text">Seconds</span>
+                    <span class="num" id="sec-box">00</span>
+                </div>
+            </div>         
+        </div>
+    </div>
 </div>
 <audio id="birthday_audio" src="/media/music/hbd.mp3"></audio>
+<script src="{% static 'js/confetti.js' %}"></script>
 </body>
-
 <style type="text/css">
 body{
     color: #1a202c;
@@ -208,6 +206,8 @@ transform: translate(-50%, -140%);
 top: 66%;
 left: 70%;
 font-size: 16px;
+margin-left: 200px;
+margin-top: 50px;
 }
 /* Basic design of countdown timer */
 .countdown {
