fix for location not showing

--- a/templates/friend_profile.html
+++ b/templates/friend_profile.html
@@ -19,7 +19,7 @@
                     <div class="mt-3">
                     <h4>{{ data.0.first_name}} {{ data.0.last_name}}</h4>
                     <p class="text-secondary mb-1">{{ data.0.birth_date|date:"d M Y" }}</p>
-                    <p class="text-muted font-size-sm">{{ data.0.address }}</p>
+                    <p class="text-muted font-size-sm">{{ data.0.city }}</p>
                     <button class="btn btn-primary">Follow</button>
                     <button class="btn btn-outline-primary">Message</button>
                     </div>
