--- a/templates/swagger-ui.html
+++ b/templates/swagger-ui.html
@@ -11,7 +11,7 @@
     <script src="//unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
     <script>
     const ui = SwaggerUIBundle({
-        url: "{% url schema_url %}",
+        url: "{% url 'Api:api_schema' %}",
         dom_id: '#swagger-ui',
         presets: [
           SwaggerUIBundle.presets.apis,
